Fix spacing around notable graduates carousel

--- a/Teaching-Learning.css
+++ b/Teaching-Learning.css
@@ -80,7 +80,7 @@
 .notable-container{
     width: 100dvw;
     padding-top: 1em;
-    padding-bottom: 2em;
+    padding-bottom: 20dvh;
    
 }
 .notable-main-container{
